--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,4 +2,10 @@ appname = hello
 httpport = 8080
 runmode = dev
 
-#MYSQL配置
+#MYSQL主库配置
+db_w_host = 127.0.0.1
+db_w_port = 3306
+db_w_username = root
+db_w_password = 123456
+db_w_database = mbook
+
